--- a/pages/resultados/resultados.css
+++ b/pages/resultados/resultados.css
@@ -198,7 +198,7 @@ main button:hover {
 
     main {
         display: flex;
-        gap: 1140px;
+        gap: 140px;
         max-width: 1160;
         margin-inline: auto;
     }
@@ -210,5 +210,24 @@ main button:hover {
 
     main h2 {
         font-size: 64px;
+    }
+
+    .pontuacao {
+        border-radius: 24px;
+        margin-bottom: 32px;
+    }
+
+    .pontuacao strong {
+        font-size: 144px;
+    }
+
+    .pontuacao p {
+        font-size: 24px;
+    }
+
+    main button {
+        font-size: 22px;
+        padding: 24px;
+        border-radius: 24px;
     }
 }
