--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -226,7 +226,7 @@ main {
     display: block;
     width: 40px;
     height: 40px;
-    background: var(--bg-color);
+    background: var(--primary-text-color);
     border-radius: 5px;
     color: var(--color-span);
 
