--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -174,7 +174,7 @@ main {
     font-weight: 500;
     border-radius: 12px;
     box-shadow: var(--shadow);
-    color: var(--primary-text-color);
+    color: var(--primary-color);
     cursor: pointer;
 }
 
@@ -226,9 +226,9 @@ main {
     display: block;
     width: 40px;
     height: 40px;
-    background: var(--primary-text-color);
+    background: var(--bg-color);
     border-radius: 5px;
-    color: var(--color-span);
+    color: var(--secondary-text-color);
 
     display: flex;
     align-items: center;
