--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -174,7 +174,7 @@ main {
     font-weight: 500;
     border-radius: 12px;
     box-shadow: var(--shadow);
-    color: var(--primary-color);
+    color: var(--primary-text-color);
     cursor: pointer;
 }
 
